packages/yew-macro/tests/function_component_attr/bad-props-param-fail.stderr
error: expected a reference to a `Properties` type (try: `&Props`)
 --> $DIR/bad-props-param-fail.rs:9:16
  |
9 | fn comp(props: Props) -> Html {
  |                ^^^^^
