packages/yew-macro/tests/function_component_attr/bad-props-param-fail.rs
use yew::prelude::*;

#[derive(Clone, Properties, PartialEq)]
struct Props {
    a: usize,
}

#[function_component(Comp)]
fn comp(props: Props) -> Html {
    html! {
        <p>
            { props.a }
        </p>
    }
}

fn main() {}
